[workspace]
resolver = "2"
members = [
  "cli",
  "test_util",
  "crates/*"
]

[workspace.package]
authors = ["the Berlin authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mttrbit/berlin"

[workspace.dependencies]
berlin_core = { path = "./crates/bln-core", version = "0.0.0" }
css = { path = "./crates/css", version = "0.0.0" }
markdown = { path = "./crates/markdown", version = "0.0.0" }
org = { path = "./crates/org", version = "0.0.0" }
parser = { path = "./crates/parser", version = "0.0.0" }
linkedin = { path = "./crates/linkedin", version = "0.0.0" }
linkedin-http = { path = "./crates/linkedin-http", version = "0.0.0" }
linkedin-macros = { path = "./crates/linkedin-macros", version = "0.0.0" }
linkedin-model = { path = "./crates/linkedin-model", version = "0.0.0" }

berlin_runtime = { version = "0.1.0", path = "./runtime" }
berlin_webstorage = { version = "0.1.0", path = "./ext/webstorage" }
test_util = { path = "./test_util" }

# anyhow = "1.0"
atty = "0.2.14"
csv = "1.2.1"
log = "=0.4.17"
notify = "5.1.0"
# parking_lot = "0.12.1"
percent-encoding = "2.2"
regex = "1"
rusqlite = { version = "=0.28.0", features = ["unlock_notify", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.48"
serde_yaml = "0.8"
toml = "0.6"
tera = "1"


# cli has a dependency on this
lightningcss = "1.0.0-alpha.40"

# these dependencies are shared
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
tokio = { version = "1.25", features = ["full"] }
tokio-util = "0.7.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# orgize = { version = "0.9.0", features = ["chrono", "syntect"]}
# clap =  { version = "3.0", features = ["derive"] }
# glob = "0.3.0"
# rayon = "1.5"
# slugify = "0.1.0"
# grass = { version = "0.10.8", default-features = false, features = ["random"] }
# # for server (borrowed from zola)
# warp = "0.3"
# notify = "4"
