[workspace]
resolver = "2"
members = ["cli", "crates/*"]

[workspace.package]
authors = ["the Berlin authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mttrbit/berlin"

[workspace.dependencies]
berlin_core = { path = "./crates/bln-core", version = "0.0.0" }
berlin_config = { path = "./crates/bln_config", version = "0.0.0" }
berlin_unsync = { path = "./crates/bln_unsync", version = "0.0.0" }
errors = { path = "./crates/errors", version = "0.0.0" }
css = { path = "./crates/css", version = "0.0.0" }
csv = { path = "./crates/csv", version = "0.0.0" }
files = { path = "./crates/files", version = "0.0.0" }
libs = { path = "./crates/libs", version = "0.0.0" }
markdown = { path = "./crates/markdown", version = "0.0.0" }
content = { path = "./crates/content", version = "0.0.0" }
org = { path = "./crates/org", version = "0.0.0" }
storage = { path = "./crates/storage", version = "0.0.0" }
templates = { path = "./crates/templates", version = "0.0.0" }
parser = { path = "./crates/parser", version = "0.0.0" }
parser_model = { path = "./crates/parser-model", version = "0.0.0" }
linkedin = { path = "./crates/linkedin", version = "0.0.0" }
linkedin-http = { path = "./crates/linkedin-http", version = "0.0.0" }
linkedin-macros = { path = "./crates/linkedin-macros", version = "0.0.0" }
linkedin-model = { path = "./crates/linkedin-model", version = "0.0.0" }

berlin_runtime = { version = "0.1.0", path = "./runtime" }
berlin_webstorage = { version = "0.1.0", path = "./ext/webstorage" }

# anyhow = "1.0"
notify = "6.1.1"
# rusqlite = { version = "=0.28.0", features = ["unlock_notify", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
pest = "2.6.0"
pest_derive = "2.6.0"
enum_dispatch = "0.3.11"
thiserror = "1.0.40"
