[package]
name = "berlin"
version = "0.1.0"
authors.workspace = true
default-run = "bln"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bln"
path = "main.rs"
doc = false

[dependencies]
serde.workspace = true
markdown.workspace = true
parser.workspace = true
berlin_core.workspace = true
berlin_runtime.workspace = true
libs.workspace = true
errors.workspace = true
templates.workspace = true

[dev-dependencies]
test_util.workspace = true
