[package]
name = "berlin_core"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A runtime for Berlin"

[lib]
path = "src/lib.rs"

[dependencies]
petgraph = "0.6.3"
regex.workspace = true
serde.workspace = true
toml.workspace = true

anyhow = "1.0"
parking_lot = "0.12.1"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
