[package]
name = "berlin_core"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A runtime for Berlin"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
errors.workspace = true
libs.workspace = true
