[package]
name = "berlin_core"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A runtime for Berlin"

[lib]
path = "src/lib.rs"

[dependencies]
berlin_config.workspace = true
berlin_unsync.workspace = true
parser.workspace = true
serde.workspace = true
errors.workspace = true
libs.workspace = true
files.workspace = true
org.workspace = true
markdown.workspace = true
css.workspace = true
csv.workspace = true
