[package]
name = "berlin_config"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Config file implementation for the Berlin CLI"

[lib]
path = "src/lib.rs"

[dependencies]
errors.workspace = true
libs.workspace = true
files.workspace = true
serde.workspace = true
