[package]
name = "berlin_unsync"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A collection of adapters to make working with Tokio single-threaded runtimes easier"

[lib]
path = "src/lib.rs"

[dependencies]
errors.workspace = true
libs.workspace = true
