[package]
name = "files"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Componenzts for accessing files"

[lib]
path = "src/lib.rs"

[dependencies]
libs.workspace = true
serde.workspace = true
