[package]
name = "libs"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A runtime for Berlin"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
petgraph = "0.6.3"
parking_lot = "0.12.1"

# anyhow = "1.0"
atty = "0.2.14"
csv = "1.2.1"
log = { version = "=0.4.17", features = ["serde"] }
clap = "4.1"
env_logger = "=0.10"
glob = "0.3.1"

notify = "5.1.0"
percent-encoding = "2.2"
pandoc = "0.8.10"
regex = "1"
# rusqlite = { version = "=0.28.0", features = ["unlock_notify", "bundled"] }
serde_json = "1.0"
serde_yaml = "0.8"
slugify = "0.1.0"
toml = "0.6"
tera = "1"
fnmatch-regex = "0.2.0"
futures = { version = "0.3.16" }
comrak = "0.16"
lazy_static = "1"
cozo = "0.7"

strum = { version = "0.24.1", features = ["derive"] }

# cli has a dependency on this
lightningcss = "1.0.0-alpha.40"

# these dependencies are shared
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
tokio = { version = "1.25", features = ["full"] }
tokio-util = "0.7.4"

slug = "0.1.4"
termcolor = "1.2.0"
warp = "0.3.3"
