[package]
name = "linkedin-model"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Model for the Linkedin Web Api"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.40"
enum_dispatch = "0.3.11"
strum = { version = "0.24.1", features = ["derive"] }
