[package]
name = "linkedin-model"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Model for the Linkedin Web Api"

[dependencies]
serde.workspace = true
enum_dispatch.workspace = true
thiserror.workspace = true
libs.workspace = true
