[package]
name = "linkedin"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Wrapper for the Linkedin Web Api"

[lib]
path = "src/lib.rs"

[dependencies]
async-stream = { version = "0.3.5", optional = true }
async-trait = { version = "0.1.68", optional = true }
base64 = "0.21.0"
chrono.workspace = true
dotenv = { version = "0.15.0", optional = true }
futures = { version = "0.3.28", optional = true }
linkedin-http.workspace = true
linkedin-model.workspace = true
linkedin-macros.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
maybe-async = "0.2.7"
getrandom = "0.2.9"
sha2 = "0.10.6"
thiserror = "1.0.40"
webbrowser = { version = "0.8.9", optional = true }

[dev-dependencies]
tokio.workspace = true
env_logger = "0.10.0"
futures-util = "0.3.28"


[features]
default = ["__async", "client-reqwest", "reqwest-default-tls"]

### Client ###
cli = ["webbrowser"]
env-file = ["dotenv"]

### HTTP ###
# Available clients. By default they don't include a TLS so that it can be
# configured.
client-ureq = ["linkedin-http/client-ureq", "__sync"]
client-reqwest = ["linkedin-http/client-reqwest", "__async"]

# Passing the TLS features to reqwest.
reqwest-default-tls = ["linkedin-http/reqwest-default-tls"]
reqwest-rustls-tls = ["linkedin-http/reqwest-rustls-tls"]
reqwest-native-tls = ["linkedin-http/reqwest-native-tls"]
reqwest-native-tls-vendored = ["linkedin-http/reqwest-native-tls-vendored"]
# Same for ureq.
ureq-rustls-tls = ["linkedin-http/ureq-rustls-tls"]
ureq-rustls-tls-native-certs = ["linkedin-http/ureq-rustls-tls-native-certs"]

# Internal features for checking async or sync compilation
__async = ["futures", "async-stream", "async-trait"]
__sync = ["maybe-async/is_sync"]

[package.metadata.docs.rs]
# When generating the docs, we also want to include the CLI methods, and working
# links for `dotenv`. We generate them for ureq so that the function signatures
# of the endpoints don't look gnarly (because of `async-trait`).
features = ["__async", "cli", "env-file", "client-ureq"]
no-default-features = true

[[example]]
name = "oauth_tokens"
required-features = ["env-file", "cli", "client-reqwest"]
path = "examples/oauth_tokens.rs"
