[package]
name = "markdown"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Markdown package"

[lib]
path = "src/lib.rs"


[dependencies]
lazy_static = "1"
comrak = "0.16"
pest = "2.6.0"
pest_derive = "2.6.0"
berlin_core.workspace = true
errors.workspace = true
serde_yaml.workspace = true
tera.workspace = true
regex.workspace = true
slugify = "0.1.0"
