[package]
name = "markdown"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Markdown package"

[lib]
path = "src/lib.rs"


[dependencies]
serde.workspace = true
pest.workspace = true
pest_derive.workspace = true

berlin_core.workspace = true
errors.workspace = true
libs.workspace = true
