[package]
name = "templates"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Tera templates used by Berlin"

[lib]
path = "src/lib.rs"

[dependencies]
files.workspace = true
errors.workspace = true
libs.workspace = true
serde.workspace = true
parser.workspace = true
page.workspace = true
